Correct CPS materialization benchmarks to single-shot measurement